--- a/requirements.txt
+++ b/requirements.txt
@@ -15,9 +15,11 @@ Django==5.1
 django-allauth==65.3.0
 django-jazzmin==3.0.1
 django-js-asset==2.2.0
+django-rosetta==0.10.1
 idna==3.8
 kombu==5.4.2
 pillow==10.4.0
+polib==1.2.0
 prompt_toolkit==3.0.48
 pycparser==2.22
 PyJWT==2.10.1
